src/test/ui/track-diagnostics/track3.stderr
error[E0422]: cannot find struct, variant or union type `Blah` in this scope
  --> $DIR/track3.rs:$LINE::$COL
   |
LL |     let _unimported = Blah { field: u8 };
   |                       ^^^^ not found in this scope
-Ztrack-diagnostics: created at compiler/rustc_resolve/src/late/diagnostics.rs:$LINE::$COL

error[E0423]: expected value, found builtin type `u8`
  --> $DIR/track3.rs:$LINE::$COL
   |
LL |     let _unimported = Blah { field: u8 };
   |                                     ^^ not a value
-Ztrack-diagnostics: created at compiler/rustc_resolve/src/late/diagnostics.rs:$LINE::$COL

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0422, E0423.
For more information about an error, try `rustc --explain E0422`.
